--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
-    "vtk.js": "^34.13.1",
     "next": "15.3.2",
+    "pdfjs-dist": "^4.6.82",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "vtk.js": "^34.13.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -25,8 +26,8 @@
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
     "postcss": "^8.5.5",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5",
-    "raw-loader": "^4.0.2"
+    "typescript": "^5"
   }
 }
