--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "cross-env NODE_ENV=development next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
     "lint": "next lint",
+    "test": "jest --runInBand",
+    "test:e2e": "playwright test",
     "sync:3dviewer": "node scripts/sync-online3dviewer-assets.js",
     "postinstall": "npm run sync:3dviewer",
     "bmad:refresh": "bmad-method install -f -i codex",
@@ -14,11 +16,11 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "draco3d": "1.5.7",
     "next": "15.3.2",
+    "occt-import-js": "0.0.22",
     "online-3d-viewer": "^0.16.0",
     "pdfjs-dist": "^4.6.82",
-    "draco3d": "1.5.7",
-    "occt-import-js": "0.0.22",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.0.2",
@@ -27,7 +29,12 @@
     "web-ifc": "0.0.68"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -35,6 +42,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.5",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.17",
