--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "recharts": "^3.0.2",
     "rhino3dm": "8.17.0",
     "vtk.js": "^34.13.1",
-    "web-ifc": "0.0.68"
+    "web-ifc": "0.0.68",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.0",
