--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postinstall": "npm run sync:3dviewer",
     "bmad:refresh": "bmad-method install -f -i codex",
     "bmad:list": "bmad-method list:agents",
-    "bmad:validate": "bmad-method validate"
+    "bmad:validate": "bmad-method validate",
+    "verify:tbom": "tsx scripts/verify-tbom-data.ts"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
@@ -47,6 +48,8 @@
     "postcss": "8.4.47",
     "raw-loader": "^4.0.2",
     "tailwindcss": "3.4.17",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.6.2",
     "typescript": "^5"
   }
 }
